--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lakshay Choudhary | Innovator. Educator. Changemaker.</title>
+    <title>Lakshay Choudhary | Portfolio</title>
     <meta name="description" content="Portfolio of Lakshay Choudhary - Innovator, Educator, and Changemaker" />
     <meta name="author" content="Lakshay Choudhary" />
 
@@ -12,11 +12,11 @@
     <meta property="og:description" content="Innovator. Educator. Changemaker." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+ <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@LakshayChoudhary" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
+    <meta name="twitter:title" content="Lakshay Choudhary | Portfolio" />
+    <meta name="twitter:image" content="/placeholder.svg" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
